fixing grid and adjusting spacing

--- a/scss/src/_grid.scss
+++ b/scss/src/_grid.scss
@@ -15,7 +15,11 @@
   &[#{$nano}grid] {
     align-items: stretch;
     justify-content: center;
-    gap: 0.5rem;
+    margin: -0.5rem;
+
+    > * {
+      padding: 0.5rem;
+    }
   }
 
   @import "grid-group";
